# docs/swagger.yaml
@@ -85,6 +85,8 @@ definitions:
         type: array
       shop_id:
         type: integer
+      status:
+        type: integer
       sup_comments:
         type: string
       total:
@@ -426,6 +428,43 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: getOrderById
+      tags:
+      - Orders
+  /orders/edit:
+    put:
+      consumes:
+      - application/json
+      description: Корректировка заказа
+      operationId: editOrder
+      parameters:
+      - description: Введите данные
+        in: body
+        name: params
+        required: true
+        schema:
+          $ref: '#/definitions/models.OrderInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.DataResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.DataResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.DataResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/utils.DataResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: editOrder
       tags:
       - Orders
   /orders/list:
